# LLM

./: .gitignore  README.md
week_1/: pyproject.toml
week_1/AI_Resume_Analyzer/: Fake_Resume_Generator.py  main.py  pyproject.toml  resumeParser.py
week_1/AI_Resume_Analyzer/Resume_Folder/: resume_1.docx  resume_2.docx  resume_3.docx
week_1/Resume_Project/: pyproject.toml  resumeChecker.py
week_1/day_1/: hello_llm.py  pyproject.toml
week_1/day_2/: sys_temp.py
week_1/day_3/: pyproject.toml  token_s.py
week_1/day_4/: pydantic_json_structure.py  pyproject.toml
week_2/: prompt_eng.py  pyproject.toml
week_2/day_8/: ReAct.py  pyproject.toml
