[project]
name = "week-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "day_3",
    "day_4",
    "Resume_Project",
]
